SimInf 6.3.0.9000
-----------------

CHANGES

* The name of the internal function that generated the error has been
  removed from the error message (use 'traceback' to print the call
  stack of the last uncaught error). Additionally, all error messages
  now ends with a '.' (full stop).

BUG FIXES

SimInf 6.3.0
------------

IMPROVEMENTS

* The 'prevalence' function now supports an additional condition in
  the formula specification to further control the population to
  include in the calculation, see the documentation.

* It is now possible to write the C code snippet of the 'pts_fun'
  argument to 'mparse' as a text string with line breaks instead of as
  a vector of character lines.

* The summary function of a model generated with the 'mparse'
  functionality now includes the propensity of each transition.

BREAKING CHANGES

* Removed the 'U<-' and 'V<-' methods. Use the new 'punchcard<-'
  method instead, see the documentation.

BUG FIXES

* Fix storing solution of the continuous state vector v up to time t,
  but not including t, when t has passed the next time in
  tspan.

* Fix a link-type optimization type mismatch in the internal C
  function 'SimInf_ldata_sp' (detected by the CRAN checks).

SimInf 6.2.0
------------

IMPROVEMENTS

* The 'mparse' model builder functionality has been improved to be
  able to generate models that contain node specific local data and
  continuous state variables. It is also possible to pass the C code
  of the post time step function to 'mparse'. See documentation.

* The package skeleton method has been updated to handle the the
  improved functionlity of 'mparse'.

* Print summary of the local data when the 'ldata' matrix in the model
  has row names.

* It's now possible to pass 'gdata', 'ldata' and 'v0' as data.frames
  to the 'SimInf_model' function.

* Better error message when an invalid rate or a negative state is
  detected during a simulation.

SimInf 6.1.0
------------

IMPROVEMENTS
