@@ -220,23 +220,9 @@ SEXP SimInf_run(
     else
         SET_VECTOR_ELT(V_dimnames, 1, Rf_duplicate(colnames));
 
-    /* Initial state. Copy u0 to either U[, 1] or U_sparse[, 1] */
+    /* Initial state.
     args.u0 = INTEGER(GET_SLOT(result, Rf_install("u0")));
-    if (args.U) {
-        memcpy(args.U, args.u0, args.Nn * args.Nc * sizeof(int));
-    } else {
-        for (i = args.jcU[0]; i < args.jcU[1]; i++)
-            args.prU[i] = args.u0[args.irU[i]];
-    }
-
-    /* Initial state. Copy v0 to either V[, 1] or V_sparse[, 1] */
     args.v0 = REAL(GET_SLOT(result, Rf_install("v0")));
-    if (args.V) {
-        memcpy(args.V, args.v0, args.Nn * args.Nd * sizeof(double));
-    } else {
-        for (i = args.jcV[0]; i < args.jcV[1]; i++)
-            args.prV[i] = args.v0[args.irV[i]];
-    }
 
     /* Local data */
     if (args.Nld > 0)
