@@ -545,19 +545,19 @@ U_exp <- structure(list(
              3L, 3L, 4L, 4L, 4L, 4L, 4L, 4L, 5L, 5L, 5L, 5L, 5L, 5L, 6L, 6L,
              6L, 6L, 6L, 6L, 7L, 7L, 7L, 7L, 7L, 7L, 8L, 8L, 8L, 8L, 8L, 8L,
              9L, 9L, 9L, 9L, 9L, 9L, 10L, 10L, 10L, 10L, 10L, 10L),
-    S = c(100L, 101L, 102L, 103L, 104L, 105L, 100L, 101L,
+    S = c(100L, 101L, 102L, 103L, 103L, 103L, 100L, 101L,
           101L, 103L, 99L, 103L, 100L, 101L, 101L, 103L, 98L, 102L, 100L,
           101L, 101L, 103L, 98L, 100L, 100L, 100L, 100L, 102L, 98L, 99L,
           100L, 100L, 100L, 102L, 98L, 97L, 100L, 100L, 99L, 102L, 96L,
           96L, 100L, 100L, 99L, 102L, 92L, 94L, 100L, 99L, 98L, 102L, 91L,
           94L, 100L, 99L, 98L, 102L, 87L, 94L),
-    I = c(1L, 2L, 3L, 4L, 5L,
-          6L, 1L, 1L, 4L, 3L, 9L, 4L, 0L, 1L, 4L, 3L, 9L, 5L, 0L, 1L, 4L,
+    I = c(1L, 1L, 3L, 4L, 6L,
+          7L, 1L, 1L, 4L, 3L, 9L, 4L, 0L, 1L, 4L, 3L, 9L, 5L, 0L, 1L, 4L,
           3L, 9L, 7L, 0L, 2L, 5L, 4L, 8L, 8L, 0L, 2L, 4L, 4L, 8L, 9L, 0L,
           1L, 5L, 3L, 10L, 10L, 0L, 1L, 4L, 3L, 12L, 11L, 0L, 2L, 4L, 3L,
           13L, 11L, 0L, 2L, 4L, 2L, 14L, 10L),
-    R = c(0L, 0L, 0L, 0L, 0L,
-          0L, 0L, 1L, 0L, 1L, 1L, 4L, 1L, 1L, 0L, 1L, 2L, 4L, 1L, 1L, 0L,
+    R = c(0L, 1L, 0L, 0L, 0L,
+          1L, 0L, 1L, 0L, 1L, 1L, 4L, 1L, 1L, 0L, 1L, 2L, 4L, 1L, 1L, 0L,
           1L, 2L, 4L, 1L, 1L, 0L, 1L, 3L, 4L, 1L, 1L, 1L, 1L, 3L, 5L, 1L,
           2L, 1L, 2L, 3L, 5L, 1L, 2L, 2L, 2L, 5L, 6L, 1L, 2L, 3L, 2L, 5L,
           6L, 1L, 2L, 3L, 3L, 8L, 7L)),
