@@ -60,7 +60,7 @@ model <- SISe(u0      = u0,
 set.seed(22)
 result <- run(model, threads = 1, solver = "aem")
 
-S_expected <- structure(c(9L, 9L, 9L, 9L, 9L, 10L, 9L, 9L, 10L, 9L, 9L, 10L, 9L,
+S_expected <- structure(c(9L, 9L, 10L, 9L, 9L, 10L, 9L, 9L, 10L, 9L, 9L, 10L, 9L,
                           9L, 10L, 9L, 9L, 10L, 9L, 9L, 10L, 9L, 8L, 10L, 9L, 9L,
                           10L, 9L, 8L, 10L, 9L, 8L, 10L, 9L, 8L, 10L, 9L, 8L, 10L,
                           10L, 8L, 10L, 9L, 8L, 10L, 10L, 7L, 10L, 10L, 7L, 10L,
@@ -73,7 +73,7 @@ S_expected <- structure(c(9L, 9L, 9L, 9L, 9L, 10L, 9L, 9L, 10L, 9L, 9L, 10L, 9L,
 S_observed <- trajectory(result, compartments = "S", as.is = TRUE)
 stopifnot(identical(S_observed, S_expected))
 
-I_expected <- structure(c(1L, 1L, 1L, 1L, 1L, 0L, 1L, 1L, 0L, 1L, 1L, 0L, 1L,
+I_expected <- structure(c(1L, 1L, 0L, 1L, 1L, 0L, 1L, 1L, 0L, 1L, 1L, 0L, 1L,
                           1L, 0L, 1L, 1L, 0L, 1L, 1L, 0L, 1L, 2L, 0L, 1L, 1L,
                           0L, 1L, 2L, 0L, 1L, 2L, 0L, 1L, 2L, 0L, 1L, 2L, 0L,
                           0L, 2L, 0L, 1L, 2L, 0L, 0L, 3L, 0L, 0L, 3L, 0L, 0L,
@@ -126,7 +126,7 @@ model <- SISe(u0  = u0,
 set.seed(123)
 result <- run(model, threads = 1, solver = "aem")
 
-S_expected <- structure(c(10L, 9L, 8L, 9L, 7L, 10L, 6L, 10L, 6L, 10L, 8L, 6L,
+S_expected <- structure(c(10L, 8L, 8L, 9L, 7L, 10L, 6L, 10L, 6L, 10L, 8L, 6L,
                           7L, 7L, 7L, 7L, 7L, 7L, 7L, 9L),
                         .Dim = c(2L, 10L),
                         .Dimnames = list(
@@ -136,7 +136,7 @@ S_expected <- structure(c(10L, 9L, 8L, 9L, 7L, 10L, 6L, 10L, 6L, 10L, 8L, 6L,
 S_observed <- trajectory(result, compartments = "S", as.is = TRUE)
 stopifnot(identical(S_observed, S_expected))
 
-I_expected <- structure(c(0L, 1L, 0L, 3L, 1L, 2L, 2L, 2L, 2L, 2L, 2L, 4L, 3L,
+I_expected <- structure(c(0L, 2L, 0L, 3L, 1L, 2L, 2L, 2L, 2L, 2L, 2L, 4L, 3L,
                           3L, 3L, 3L, 3L, 3L, 3L, 1L),
                         .Dim = c(2L, 10L),
                         .Dimnames = list(
@@ -148,6 +148,7 @@ stopifnot(identical(I_observed, I_expected))
 
 ## run with AEM using multiple threads
 if (SimInf:::have_openmp()) {
+    set.seed(123)
     result <- run(model, threads = 123L, solver = "aem")
     result
 
